<resources>
    <string name="app_name">Stock Tracker</string>
    <string name="nav_title_stocks">Stocks</string>
    <string name="nav_title_currencies">Currencies</string>
    <string name="nav_title_news">News</string>
    <string name="nav_title_about">About</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_sub_title">Sub items</string>
    <string name="stock_day_hi_lo">Day Hi/Lo</string>
    <string name="screen_dimensions">Screen dimensions</string>
    <string name="title_activity_stock_prefs">StockPrefsActivity</string>
    <string name="stock_detail_title">Stock results</string>
    <string name="stock_graph_title">Stock graph</string>
    <string name="stock_chart_description">Stock chart</string>
    <string name="one_day_chart">1d</string>
    <string name="five_day_chart">5d</string>
    <string name="one_month_chart">1m</string>
    <string name="three_month_chart">3m</string>
    <string name="six_month_chart">6m</string>
    <string name="twelve_month_chart">12m</string>
    <string name="one_year_chart">1y</string>
    <string name="five_year_chart">5y</string>
    <string name="symbol_suggestion_hint">Enter one(or more) letters of the stockItem name</string>
    <string name="action_add_symbol">Add symbol</string>
    <string name="action_remove_stock">Remove stockItem</string>
    <string name="stock_item_divider">/</string>
    <string name="stock_exchange_label">Exchange</string>
    <string name="stock_price_label">Stock Price</string>
    <string name="change_in_price_label">Change in Price</string>
    <string name="percentage_change_in_price_label">% Change in Price</string>
    <string name="opening_price_label">Opening Price</string>
    <string name="previous_close_label">Previous Close</string>
    <string name="day_high_label">Day High</string>
    <string name="day_low_label">Day Low</string>
    <string name="year_high_label">Year High</string>
    <string name="year_low_label">Year Low</string>
    <string name="market_cap_label">Market Capitalisation</string>
    <string name="volume_label">Volume</string>
    <string name="average_volume_label">Average Volume</string>
    <string name="annual_yield_label">Annual Yield</string>
    <string name="annual_percentage_yield_label">Annual % Yield</string>
    <string name="earnings_per_share_label">Earnings Per Share</string>
</resources>
