<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vertical_button_group"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/time_frame_one_month"
        android:layout_width="@dimen/dimen_vertical_button"
        android:layout_height="@dimen/dimen_vertical_button"
        android:background="@drawable/button_selector"
        android:textColor="@drawable/button_text_selector"
        android:button="@null"
        android:gravity="center"
        android:text="@string/one_month_chart"/>

    <RadioButton
        android:id="@+id/time_frame_three_months"
        android:layout_width="@dimen/dimen_vertical_button"
        android:layout_height="@dimen/dimen_vertical_button"
        android:checked="true"
        android:background="@drawable/button_selector"
        android:textColor="@drawable/button_text_selector"
        android:button="@null"
        android:gravity="center"
        android:text="@string/three_month_chart"/>

    <RadioButton
        android:id="@+id/time_frame_six_months"
        android:layout_width="@dimen/dimen_vertical_button"
        android:layout_height="@dimen/dimen_vertical_button"
        android:background="@drawable/button_selector"
        android:textColor="@drawable/button_text_selector"
        android:button="@null"
        android:gravity="center"
        android:text="@string/six_month_chart"/>


    <RadioButton
        android:id="@+id/time_frame_twelve_months"
        android:layout_width="@dimen/dimen_vertical_button"
        android:layout_height="@dimen/dimen_vertical_button"
        android:background="@drawable/button_selector"
        android:textColor="@drawable/button_text_selector"
        android:button="@null"
        android:gravity="center"
        android:text="@string/twelve_month_chart"/>



</RadioGroup>
